# short-circuit

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  sc-config.cmake.in
.github/workflows/: test.yml
include/sc/: backend.h  backend_uv.h  callbacks.h  errcode.h  msg.h  record.h  sc.h  socket.h  watcher.h
src/: backend.c  backend.h  backend_uv.c  backend_uv.h  die.c  msg.c  msg.h  msg_reader.c  msg_reader.h  proto.h  record.c  record.h  record_reader.c  record_reader.h  sc.c  socket.c  uri.c  uri.h  warn.c  warn.h  watcher.c  watcher.h
test/: CMakeLists.txt  client.c  desired.txt  echo_server.c  endian.h  fatal.h  generate_record.c  helper.h  send_hello.c  server.c  test_client_tcp  test_echo_server  test_send_hello  test_server  test_server_pipe  test_server_tcp
test/assets/: danilo_horta.data  lorem.size  stop.record
test/tools/: CMakeLists.txt  disrec.c  endian.h  fatal.h  genrec.c  mktemp_dir  recvrec  runtime_dir  sendrec  termproc  waitport  waitproc  waitsock
